<resources>
    <string name="app_name">Laboratorio 03</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="version">v. Beta</string>
    <string name="created_by">pp.developer</string>
    <string name="prompt_usuario">Usuario</string>
    <string name="prompt_contrasena">Constraseña</string>
    <string name="prompt_login">Entrar</string>
    <string name="label_galeria">Galeria</string>
    <string name="label_comentarios">Comentario(s)</string>
    <string name="label_nombre">Nombre</string>
    <string name="label_Email">Correo electronico</string>
    <string name="label_sexo">Sexo</string>
    <string name="label_usuario">Usuario</string>
    <string name="label_contrasena">Contraseña</string>
    <string name="label_guardar">Guardar</string>
    <string name="label_registro">No tienes cuenta ? Registrate.</string>
    <string name="label_restaurantes">Restaurantes</string>
    <string name="google_map_key">AIzaSyCci9i5K44qO7Zpc-YuBvBjc0Rz4B71k-k</string>

    <string-array name="a_sexo">
        <item>-- Seleccione --</item>
        <item>Masculino</item>
        <item>Femenino</item>
    </string-array>
</resources>